Animations fixed on iOS devices

--- a/src/assets/css/DefaultStyles.css
+++ b/src/assets/css/DefaultStyles.css
@@ -62,7 +62,6 @@ h4 {
     margin-right: 0;
     font-weight: bold;
     font-family: "Roboto", sans-serif;
-    z-index: 99;
   }
   h2 {
     display: block;
@@ -73,7 +72,6 @@ h4 {
     margin-right: 0;
     font-weight: bold;
     font-family: "Roboto", sans-serif;
-    z-index: 99;
   }
   h3 {
     display: block;
@@ -84,7 +82,6 @@ h4 {
     margin-right: 0;
     font-weight: bold;
     font-family: "Roboto", sans-serif;
-    z-index: 99;
   }
   h4 {
     display: block;
@@ -95,7 +92,6 @@ h4 {
     margin-right: 0;
     font-weight: bold;
     font-family: "Roboto", sans-serif;
-    z-index: 99;
   }
 }
 
