--- a/src/components/customComponents/hamburgerMenu/styles.css
+++ b/src/components/customComponents/hamburgerMenu/styles.css
@@ -43,44 +43,61 @@
 }
 
 .top-line.open {
+  display: block;
   animation: fade-out-leftwards 0.5s forwards;
+  -webkit-animation: fade-out-leftwards 0.5s forwards;
 }
 
 .middle-line.open {
+  display: block;
   margin-top: 6px;
   margin-bottom: 6px;
   animation: rotate-left 0.5s forwards;
+  -webkit-animation: rotate-left 0.5s forwards;
 }
 
 .hidden-middle-line.open {
+  display: block;
   animation: rotate-right 0.5s forwards;
+  -webkit-animation: rotate-right 0.5s forwards;
 }
 
 .bottom-line.open {
+  display: block;
   animation: fade-out-rightwards 0.5s forwards;
+  -webkit-animation: fade-out-rightwards 0.5s forwards;
 }
 
 .top-line.close {
+  display: block;
   animation: fade-in-leftwards 0.5s forwards;
+  -webkit-animation: fade-in-leftwards 0.5s forwards;
 }
 
 .middle-line.close {
+  display: block;
   margin-top: 4px;
   margin-bottom: 4px;
   animation: unrotate-left 0.5s forwards;
+  -webkit-animation: unrotate-left 0.5s forwards;
 }
 
 .hidden-middle-line.close {
+  display: block;
   animation: unrotate-right 0.5s forwards;
+  -webkit-animation: unrotate-right 0.5s forwards;
 }
 
 .bottom-line.close {
+  display: block;
   animation: fade-in-rightwards 0.5s forwards;
+  -webkit-animation: fade-in-rightwards 0.5s forwards;
 }
 
 @keyframes fade-out-leftwards {
   0% {
     opacity: 1;
+    transform: transalteX(0px);
   }
   100% {
     opacity: 0;
@@ -91,6 +108,7 @@
 @keyframes fade-out-rightwards {
   0% {
     opacity: 1;
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
@@ -121,12 +139,18 @@
 }
 
 @keyframes rotate-left {
+  0% {
+    tranform: rotate(0deg);
+  }
   100% {
     transform: rotate(45deg);
   }
 }
 
 @keyframes rotate-right {
+  0% {
+    tranform: rotate(0deg);
+  }
   100% {
     transform: rotate(-45deg);
   }
@@ -151,8 +175,10 @@
 }
 
 .opaque {
+  display: block;
   background-color: #f7f7f7;
   animation: make-opaque 0.5s forwards;
+  -webkit-animation: make-opaque 0.5s forwards;
 }
 
 @keyframes make-opaque {
@@ -165,13 +191,16 @@
 }
 
 .clear {
+  display: block;
   background-color: #f7f7f7;
   animation: clear 0.5s forwards;
+  -webkit-animation: clear 0.5s forwards;
 }
 
 @keyframes clear {
   0% {
     opacity: 0.9;
+    visibility: visible;
   }
   100% {
     opacity: 0;
@@ -193,7 +222,9 @@
 }
 
 .fade-in-upwards {
+  display: block;
   animation: fade-in-upwards 0.5s forwards;
+  -webkit-animation: fade-in-upwards 0.5s forwards;
 }
 
 @keyframes fade-in-upwards {
@@ -202,16 +233,20 @@
     opacity: 0;
   }
   100% {
+    transform: translateY(0px);
     opacity: 1;
   }
 }
 
 .fade-out-downwards {
+  display: block;
   animation: fade-out-downwards 0.5s forwards;
+  -webkit-animation: fade-out-downwards 0.5s forwards;
 }
 
 @keyframes fade-out-downwards {
   0% {
+    transform: translateY(0px);
     opacity: 1;
   }
   100% {
